[gd_scene load_steps=2 format=3 uid="uid://vs2gc7hbww43"]

[ext_resource type="Script" uid="uid://bi5mxfiwluard" path="res://Scenes/end_game_ui.gd" id="1_x2uj6"]

[node name="EndGameUI" type="Control" node_paths=PackedStringArray("end_game_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2uj6")
end_game_label = NodePath("Label")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -11.5
offset_right = 43.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Well player you scored:

"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -328.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 300
alignment = 1

[node name="replay_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = " Replay  "

[node name="quit_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = " Quit"

[connection signal="button_up" from="HBoxContainer/replay_button" to="." method="_on_replay_button_button_up"]
[connection signal="button_up" from="HBoxContainer/quit_button" to="." method="_on_quit_button_button_up"]
